fixed social icon links, added fixed width, fixed the email overflow

--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -45,7 +45,7 @@ html{
 
 /* main content css */
 #main-container{
-	width: 90vw;
+	max-width: 1160px;
 	margin: 20px auto;
 }
 .content-title{
@@ -89,6 +89,9 @@ footer{
 }
 .footer{
 	text-align: center;	
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 .social-media-links{
 	color: white;
@@ -101,7 +104,7 @@ footer{
 }
 a{
 	text-decoration: none;
-	
+	color: white;
 }
 a:visited{
 	color: white;
@@ -111,13 +114,12 @@ a:visited{
 	margin: 2rem 0px 2rem 0px;
 	color: white;
 	font-size: 2rem;
-	width: 100%;
-	min-width: 396px;
 }
 .contact{
 	font-size: 2rem;
 	color: white;
 }
+.
 .sm{
-	font-size: 1rem;
+	font-size: 0.1rem;
 }
